1. refactor GetPotterSerialTotalPrice() logic with IDiscount and related discount classes 2. override Book.Equals() & Book.GetHashCode() to fixed the issue when adding same book in Dictionary's key 3. remove compute logic in test case: OrderTests.Test_Add_2_Same_Book_Count_Is_1_Quantity_Is_2() 4. remove unnecessary property Serial from test case, because there is no such requirement 5. remove Math.Floor for return value, because there is no such requirement

--- a/PotterShoppingCart/PotterShoppingCart.csproj
+++ b/PotterShoppingCart/PotterShoppingCart.csproj
@@ -39,8 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\PackOf1PotterDiscount.cs" />
+    <Compile Include="Domain\PackOf3PotterDiscount.cs" />
+    <Compile Include="Domain\PackOf2PotterDiscount.cs" />
+    <Compile Include="Domain\PackOf4PotterDiscount.cs" />
+    <Compile Include="Domain\PackOf5PotterDiscount.cs" />
     <Compile Include="Entity\Book.cs" />
     <Compile Include="Entity\Order.cs" />
+    <Compile Include="Interface\IDiscount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\ShoppingCartService.cs" />
   </ItemGroup>
