--- a/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
+++ b/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
@@ -69,7 +69,7 @@
   <ItemGroup>
     <Compile Include="Entity\OrderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShoppingCartTest.cs" />
+    <Compile Include="Service\ShoppingCartTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="User Story.txt" />
